# flext-ldap

./: .context_memory  .editorconfig  .env.examples  .env.minimal  .env.test  .failure_memory  .flake8  .freshness_memory  .gitignore  .license-header.txt  .pattern_memory  .pre-commit-config.yaml  .pylintrc  .resolution_memory  .system_memory  .token  .yamllint  =20  AGENTS.md  ALGAR_OUD_MIG_INTEGRATION_VALIDATION_REPORT.md  API_CONSOLIDATION_COMPLETE.md  API_STANDARDIZATION_PLAN.md  API_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_CLEANUP.md  CHANGELOG_LDAP_SIMPLE_CLIENT.md  CLAUDE.local.md  CLAUDE.md  COMPLIANCE_REPORT.md  COMPREHENSIVE_FACADE_TRANSFORMATION_REPORT.md  COMPREHENSIVE_RFC_TESTING_IMPLEMENTATION.md  CONFIGURATION_AUDIT_REPORT.md  CONTRIBUTING.md  COVERAGE_GAP_ANALYSIS_REPORT.md  COVERAGE_STATUS_UPDATE.md  DATACLASS_MIGRATION.md  DOCKER.md  ENHANCEMENTS_SUMMARY.md  ENV_CONFIGURATION.md  (+99 more)
.cursor/: settings.json
.github/workflows/: ci.yml  release.yml
.qlty/: qlty.toml
.scope/: config.toml
.serena/: project.yml
.serena/memories/: completion_checklist.md  flext-cli-typing-improvements-progress.md  project_overview.md
api/: README.md
api-reference/: README.md
architecture/: README.md  adapters.md  arc42-02-constraints-architecture-constraints.md  arc42-07-deployment-deployment-view.md  arc42-08-cross-cutting-cross-cutting-concepts.md  arc42-09-decisions-architecture-decisions.md  arc42-12-glossary-glossary.md  c4-code.md  c4-components.md  c4-system-context.md  service-layer.md
architecture/adr/: 001-clean-architecture.md  003-railway-pattern-railway-pattern-implementation.md  004-server-operations-server-specific-operations.md  template.md
architecture/data/: data-models.md  storage.md
architecture/diagrams/: c4-system-context.puml
architecture/quality/: reliability.md  scalability.md
architecture/security/: security-model.md
backups/schemas/: test_schema_backup_20250626_162929.json  test_schema_backup_20250626_162929.ldif
config/: ldap.yaml
development/: README.md
docker/: docker-compose.flext-oud-test.yml  docker-compose.yml
docs/: ACL_MANAGEMENT.md  ADR_PYTHON_LDAP_LIBRARY.md  ANALYSIS_TEMPLATE.md  DEVELOPER_QUICK_START.md  DOCUMENTATION_CONTROL_SYSTEM.md  DOCUMENTATION_INDEX.md  FACADE_PATTERN_IMPLEMENTATION.md  FACADE_USAGE_EXAMPLES.md  IMPLEMENTATION_CHECKLIST.md  MIGRATION_INTEGRATION_ANALYSIS.md  NAVIGATION_INDEX.md  PROJECT_ANALYSIS_PLAN.md  README.md  RFC_IMPLEMENTATION_MAPPING.md  RFC_QUICK_REFERENCE.md  TODO.md  VISUAL_GUIDES.md  api-reference.md  architecture.md  class-method-investigation-report.md  configuration.md  development.md  getting-started.md  implementation_status.md  index.md  integration.md  phase-10-completion-summary.md  phase-10-integration-tests-completion.md  phase2_implementation_plan.md  phase3_implementation_plan.md  plan-end.md  rfc-listing.txt  rfc2377.txt  rfc2820.txt  rfc2849-ldif.txt  rfc3352.txt  rfc3384.txt  rfc4520.txt  rfc4521.txt  rfc4529.txt  (+15 more)
docs/api/: README.md
docs/api-reference/: README.md
docs/architecture/: README.md  __init__.py  adapters.md  arc42-01-introduction-introduction-and-goals.md  arc42-02-constraints-architecture-constraints.md  arc42-03-system-scope-system-scope-and-context.md  arc42-04-solution-strategy-solution-strategy.md  arc42-05-building-blocks-building-block-view.md  arc42-06-runtime-runtime-view.md  arc42-07-deployment-deployment-view.md  c4-code.md  (+10 more)
examples/: 01_basic_ldap_operations.py  01_basic_operations.py  02_basic_usage.py  02_search_operations.py  03_authentication.py  03_ldap_simple_client.py  04_cli_integration.py  04_ldif_operations.py  05_integrated_ldap_service.py  05_universal_operations.py  06_advanced_patterns.py  06_validation_patterns.py  07_advanced_patterns.py  07_complete_ldap_crud.py  08_acl_operations.py  08_run_with_docker_ldap.py  09_schema_operations.py  10_connection_management.py  11_repository_patterns.py  12_domain_services.py  README.md  __init__.py  advanced_patterns.py  api_examples.py  basic_ldap_operations.py  basic_usage.py  basic_usage_example.py  clean_api_demo.py  cli_demo.py  complete_ldap_crud.py  complete_ldap_crud_example.py  config_singleton_usage.py  core_infrastructure_demo.py  core_only_demo.py  flext_cli_integration_example.py  flext_integrated_example.py  generic_ldap_example.py  integrated_ldap_service.py  ldap_simple_client.py  ldap_simple_client_example.py  (+8 more)
guides/: README.md  acl-management.md  configuration.md  development.md  getting-started.md  integration.md  server-operations.md  skill-automation-pattern.md  testing.md  troubleshooting.md  universal-ldap-guide.md
maintenance/: README.md  troubleshooting.md  user-guide.md
reports/: pytest.xml
scripts/: README.md  analyze_test_coverage_gaps.py  ast_analyzer.py  check_broad_exceptions.py  claude_complete_system.py  claude_docstring_standardizer.py  claude_documentation_validator.py  claude_freshness_monitor.py  claude_self_validation.py  dependency_mapper.py  generate_test_stubs.py  solid_violations_scanner.py
src/: README.md  pyproject.toml
tests/: README.md  __init__.py  _models.py  base.py  conftest.py  conftest.py.disabled  conftest_project.py  constants.py  models.py  protocols.py  settings.py  test_adapters_directory_adapter.py  test_algar_oud_mig_integration_compatibility.py  test_api.py  test_api_integration.py  test_application_services.py  test_basic.py  test_cli.py  test_cli_integration.py  test_cli_new.py  test_client.py  test_config.py  test_converters.py  test_converters_integration.py  test_dn_utils.py  test_domain_entities.py  test_domain_models.py  test_domain_specifications.py  test_domain_value_objects.py  test_domain_values.py  test_entities.py  test_final_validation.py  test_functional.py  test_imports.py  test_infrastructure.py  test_infrastructure_certificate_validator.py  test_infrastructure_certificate_validator_simplified.py  test_infrastructure_connection_manager.py  test_infrastructure_data_type_converter.py  test_infrastructure_error_correlation.py  (+22 more)
typings/: ldap3.pyi  test_flext_cli_integration.pyi
(+1324 files in other folders)
