[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "flext-ldap"
version = "0.10.0"
description = "Enterprise LDAP Operations Library for FLEXT Framework"
readme = "README.md"
keywords = [
  "adapter",
  "clean-architecture",
  "ddd",
  "enterprise",
  "flext",
  "integration",
  "ldap",
  "typed",
]
license = "MIT"
maintainers = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
authors = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
  "Typing :: Typed",
]
dependencies = [
  "beartype>=0.19",
  "cryptography>=45.0.5",
  "ldap3>=2.9",
  "pydantic>=2.12.3",
  "pydantic-core>=2.41.4",
  "pydantic-settings>=2.11",
  "structlog>=25.4",
]
urls.Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
urls.Homepage = "https://github.com/flext-sh/flext"
urls.Repository = "https://github.com/flext-sh/flext"

[tool]
[tool.poetry]
dependencies.cryptography = ">=45.0.5"
dependencies.ldap3 = ">=2.9.1"
dependencies.pydantic = ">=2.12.3"
dependencies.pydantic-settings = ">=2.11.0"
dependencies.python = ">=3.13,<3.14"
dependencies.structlog = ">=25.4.0"
dependencies.flext-ldif.develop = true
dependencies.flext-ldif.path = ".flext-deps/flext-ldif"
dependencies.flext-quality.develop = true
dependencies.flext-quality.optional = true
dependencies.flext-quality.path = ".flext-deps/flext-quality"
group.dev.dependencies.autoflake = ">=2.3.1"
group.dev.dependencies.black = ">=25.1.0"
group.dev.dependencies.codespell = ">=2.3.0"
group.dev.dependencies.commitizen = ">=4.8.3"
group.dev.dependencies.detect-secrets = ">=1.5.0"
group.dev.dependencies.isort = ">=6.0.1"
group.dev.dependencies.pre-commit = ">=4.0.1"
group.dev.dependencies.pylint = ">=3.3.0"
group.dev.dependencies.pyrefly = "^0.46.3"
group.dev.dependencies.pyupgrade = ">=3.19.0"
group.dev.dependencies.radon = ">=6.0.1"
group.dev.dependencies.ruff = ">=0.12.3"
group.dev.dependencies.types-ldap3 = ">=2.9.13.20250622"
group.dev.dependencies.vulture = ">=2.13"
group.dev.dependencies.pytest = "^9.0.2"
group.dev.dependencies.opentelemetry-api = ">=1.39.1"
group.dev.dependencies.opentelemetry-sdk = ">=1.39.1"
group.dev.dependencies.prompt-toolkit = ">=3.0.52"
group.dev.dependencies.sqlparse = ">=0.5.5"
group.security.dependencies.bandit = ">=1.8.0"
group.security.dependencies.pip-audit = ">=2.7.3"
group.test.dependencies.docker = ">=7.1.0"
group.test.dependencies.factory-boy = ">=3.3.1"
group.test.dependencies.faker = ">=37.4.0"
group.test.dependencies.hypothesis = ">=6.125.0"
group.test.dependencies.pytest = ">=8.4.0"
group.test.dependencies.pytest-benchmark = ">=5.1.0"
group.test.dependencies.pytest-clarity = ">=1.0.1"
group.test.dependencies.pytest-cov = ">=7.0.0"
group.test.dependencies.pytest-deadfixtures = ">=2.2.1"
group.test.dependencies.pytest-env = ">=1.1.5"
group.test.dependencies.pytest-mock = ">=3.14.0"
group.test.dependencies.pytest-sugar = ">=1.0.0"
group.test.dependencies.pytest-timeout = ">=2.4.0"
group.test.dependencies.pytest-xdist = ">=3.8.0"
group.test.dependencies.python-ldap = ">=3.4.4"
group.typings.dependencies.types-docker = "^7.1.0.20250809"
group.typings.dependencies.types-ldap3 = ">=2.9.13.20250622"
group.typings.dependencies.types-psutil = ">=7.0.0"
group.typings.dependencies.types-python-dateutil = ">=2.9.0"
group.typings.dependencies.types-pyyaml = ">=6.0.12"
group.typings.dependencies.types-redis = ">=4.6.0"
group.typings.dependencies.types-requests = ">=2.32.4"
group.typings.dependencies.types-setuptools = ">=80.9.0"
group.typings.dependencies.types-toml = ">=0.10.8.20240310"
packages = [ { from = "src", include = "flext_ldap" } ]

[tool.ruff]
extend = "../ruff-shared.toml"

[tool.deptry]
known_first_party = [
  "flext_ldap",
  "flext_core",
  "flext_ldif",
  "flext_cli",
  "flext_observability",
]
pep621_dev_dependency_groups = [
  "dev",
  "test",
  "typings",
  "security",
]
per_rule_ignores.DEP002 = [
  # CLI tools (invoked from command line, not imported)
  "autoflake",
  "bandit",
  "black",
  "codespell",
  "commitizen",
  "detect-secrets",
  "isort",
  "pip-audit",
  "pre-commit",
  "pylint",
  "pyrefly",
  "pyupgrade",
  "radon",
  "ruff",
  "vulture",
  # Type stubs
  "types-docker",
  "types-ldap3",
  "types-psutil",
  "types-python-dateutil",
  "types-pyyaml",
  "types-redis",
  "types-requests",
  "types-setuptools",
  "types-toml",
  # Runtime deps used indirectly
  "beartype",
  "cryptography",
  "ldap3",
  "pydantic-core",
  "pytest",
  "pytest-cov",
  "structlog",
]

[tool.pytest]
ini_options.addopts = [
  # PARALELIZAÇÃO (pytest-xdist) - REGRA 3: Idempotência & Paralelização
  # Uncomment to enable parallel testing (requires pytest-xdist installed)
  # "-n", "auto",              # Use all CPU cores (or set number like "4")
  # "--dist", "loadgroup",     # Distribute by test file (keeps module tests together)
  # NOTE: Tests MUST be idempotent with unique DNs (make_user_dn/make_group_dn fixtures)
  # Integration tests share single LDAP container but use DN namespacing for isolation
  "--strict-config",
  "--strict-markers",
  "--tb=short",
  "-p no:sugar",
  "-q",
  "-ra",
  "--timeout=30",
  "--timeout-method=signal",
  "--durations=0"
]
ini_options.filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
ini_options.markers = [
  "benchmark: Benchmark tests",
  "concurrency: Concurrency tests",
  "docker: Tests requiring Docker containers",
  "e2e: End-to-end tests",
  "factory_test: Factory tests",
  "integration: Integration tests (require external services)",
  "ldap: LDAP-specific tests",
  "memory: Memory tests",
  "mock_heavy: Tests with heavy mocking",
  "performance: Performance tests (sensitive to load)",
  "race_condition: Race condition tests",
  "regression: Regression tests",
  "slow: Slow tests (execution time > 5 seconds)",
  "smoke: Smoke tests",
  "stress: Stress tests",
  "test: tests",
  "timeout: Timeout tests",
  "unit: Unit tests (fast, no external dependencies)",
]
ini_options.minversion = "8.0"
ini_options.norecursedirs = [
  ".git",
  ".pytest_cache",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  "*.egg-info",
  ".bak",
  ".bak*",
  "helpers.bak",
  "fixtures.bak",
  "unit.bak",
  "integration.bak",
]
ini_options.python_classes = [
  "Test*",
]
ini_options.python_files = [
  "*_test.py",
  "test_*.py",
]
ini_options.python_functions = [
  "test_*",
]
ini_options.testpaths = [
  "tests",
]

[tool.coverage]
run.source = [ "src/flext_ldap" ]
report.fail_under = 100
report.precision = 2

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = false
incremental = true
mypy_path = "../typings"
namespace_packages = false
no_implicit_optional = true
python_version = "3.13"
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
overrides = [ { module = [
  "ldap3",
  "ldap3.*",
], ignore_missing_imports = true } ]

[tool.pyrefly]
search-path = [
  "../typings",
  "../typings/generated",
  ".",
  "src",
  "tests",
]

[tool.bandit]
skips = [ "B404", "B603", "B607", "B105", "B608" ]
